# onco-ner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
api/: main.py
benchmark/results/: Comparaisons.xlsx
configs/: config.yaml
configs/models/: drbert.yaml  moderncamembert_base.yaml  xlm_roberta_base.yaml
docs/: rapport_scientifique.md
evaluation/: benchmark.py  error_analysis.py
notebooks/: 01_exploration.ipynb  01exploration.ipynb
src/onco_ner/: __init__.py  exceptions.py  pipeline.py  schemas.py
src/onco_ner/data/: brat_parser.py  preprocessing.py
src/onco_ner/models/: ner_model.py  normalizer.py
src/onco_ner/utils/: logging.py  seed.py
streamlit/: app.py
tests/: test_ner_model.py  test_normalizer.py  test_parser.py  test_pipeline.py  test_preprocessing.py  test_spark_preprocessing.py
training/: spark_preprocessing.py  train.py  train_optimized.py
