[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onco-ner"
version = "0.1.0"
description = "Extraction et normalisation d'entités oncologiques (ICD-O) à partir de textes cliniques en français"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "polars==1.9.0",
    "transformers==4.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]