[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onco-ner"
version = "0.1.0"
description = "Extraction et normalisation d'entités oncologiques (ICD-O) à partir de textes cliniques en français"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "polars==1.9.0",
    "transformers==4.49.0",
    "rapidfuzz",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["onco_ner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "spark: tests nécessitant Java et PySpark (exclure avec -m 'not spark')",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]